--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "kronos-flow-control-step",
   "version": "0.0.0",
-  "description": "Base step implementation",
-  "main": "index.js",
+  "description": "step to administrate flows",
+  "main": "flow_control.js",
   "scripts": {
     "cover": "node ./node_modules/istanbul/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports test",
     "doc": "jsdoc lib/*.js",
-    "test": "mocha test/*_test.js",
+    "test": "mocha test/*.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -18,13 +18,14 @@
   },
   "homepage": "https://github.com/Kronos-Integration/kronos-flow-control-step#readme",
   "dependencies": {
-    "kronos-step": "^1.1.0"
+    "kronos-step": "2.7.1"
   },
   "devDependencies": {
     "chai": "3.4.0",
+    "chai-as-promised": "5.1.0",
     "istanbul": "^0.4.0",
-    "kronos-test-step": "1.0.0",
-    "mocha": "2.3.3",
+    "kronos-test-step": "1.1.0",
+    "mocha": "2.3.4",
     "semantic-release": "6.0.3"
   },
   "contributors": [{
