--- a/package.json
+++ b/package.json
@@ -21,20 +21,23 @@
     "kronos-step": "2.7.1"
   },
   "devDependencies": {
-    "chai": "3.4.0",
+    "chai": "3.4.1",
     "chai-as-promised": "5.1.0",
     "istanbul": "^0.4.0",
-    "kronos-test-step": "1.1.0",
+    "kronos-test-step": "1.2.0",
     "mocha": "2.3.4",
     "semantic-release": "6.0.3"
   },
-  "contributors": [{
-    "name": "Torsten Link",
-    "email": "torstenlink@gmx.de"
-  }, {
-    "name": "Markus Felten",
-    "email": "markus.felten@gmx.de"
-  }],
+  "contributors": [
+    {
+      "name": "Torsten Link",
+      "email": "torstenlink@gmx.de"
+    },
+    {
+      "name": "Markus Felten",
+      "email": "markus.felten@gmx.de"
+    }
+  ],
   "license": "BSD-2-Clause",
   "engines": {
     "node": ">=4.2.1"
