--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "chai": "3.4.1",
     "chai-as-promised": "5.1.0",
     "istanbul": "^0.4.0",
+    "kronos-flow": "^1.3.0",
+    "kronos-step-stdio": "^1.0.0",
     "kronos-test-step": "1.2.0",
     "mocha": "2.3.4",
     "semantic-release": "6.0.3"
