--- a/package.json
+++ b/package.json
@@ -19,25 +19,28 @@
   },
   "homepage": "https://github.com/Kronos-Integration/kronos-flow-control-step#readme",
   "dependencies": {
-    "kronos-step": "2.7.1"
+    "kronos-step": "2.8.0"
   },
   "devDependencies": {
     "chai": "3.4.1",
     "chai-as-promised": "5.1.0",
     "istanbul": "^0.4.0",
     "kronos-flow": "^1.3.0",
-    "kronos-step-stdio": "^1.0.0",
+    "kronos-step-stdio": "2.0.0",
     "kronos-test-step": "1.2.0",
     "mocha": "2.3.4",
     "semantic-release": "6.0.3"
   },
-  "contributors": [{
-    "name": "Torsten Link",
-    "email": "torstenlink@gmx.de"
-  }, {
-    "name": "Markus Felten",
-    "email": "markus.felten@gmx.de"
-  }],
+  "contributors": [
+    {
+      "name": "Torsten Link",
+      "email": "torstenlink@gmx.de"
+    },
+    {
+      "name": "Markus Felten",
+      "email": "markus.felten@gmx.de"
+    }
+  ],
   "license": "BSD-2-Clause",
   "engines": {
     "node": ">=4.2.1"
