--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Kronos-Integration/kronos-flow-control-step#readme",
   "dependencies": {
+    "kronos-service-manager": "^1.5.0",
     "kronos-step": "2.8.0"
   },
   "devDependencies": {
