--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "istanbul": "^0.4.0",
     "kronos-flow": "^1.3.0",
     "kronos-step-stdio": "2.0.0",
-    "kronos-test-step": "1.2.0",
+    "kronos-test-step": "^2.0.0",
     "mocha": "2.3.4",
     "semantic-release": "6.0.3"
   },
