--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   "homepage": "https://github.com/Kronos-Integration/kronos-flow-control-step#readme",
   "dependencies": {
     "kronos-service-manager": "^1.6.0",
-    "kronos-step": "2.8.0"
+    "kronos-step": "^2.9.0"
   },
   "devDependencies": {
     "chai": "3.4.1",
     "chai-as-promised": "5.1.0",
-    "istanbul": "^0.4.0",
+    "istanbul": "0.4.1",
     "kronos-flow": "^1.3.0",
     "kronos-step-stdio": "2.0.0",
-    "kronos-test-step": "^2.0.0",
+    "kronos-test-step": "2.1.0",
     "mocha": "2.3.4",
     "semantic-release": "6.0.3"
   },
