--- a/package.json
+++ b/package.json
@@ -25,19 +25,22 @@
     "chai": "3.4.1",
     "chai-as-promised": "5.2.0",
     "istanbul": "0.4.1",
-    "kronos-flow": "^1.4.0",
+    "kronos-flow": "^1.4.1",
     "kronos-step-stdio": "2.0.0",
     "kronos-test-step": "2.8.0",
     "mocha": "2.3.4",
     "semantic-release": "6.0.3"
   },
-  "contributors": [{
-    "name": "Torsten Link",
-    "email": "torstenlink@gmx.de"
-  }, {
-    "name": "Markus Felten",
-    "email": "markus.felten@gmx.de"
-  }],
+  "contributors": [
+    {
+      "name": "Torsten Link",
+      "email": "torstenlink@gmx.de"
+    },
+    {
+      "name": "Markus Felten",
+      "email": "markus.felten@gmx.de"
+    }
+  ],
   "license": "BSD-2-Clause",
   "engines": {
     "node": ">=4.2.1"
