--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "homepage": "https://github.com/Kronos-Integration/kronos-flow-control-step#readme",
   "dependencies": {
-    "kronos-step": "^3.0.0"
+    "kronos-step": "^3.0.1"
   },
   "devDependencies": {
     "chai": "3.4.1",
     "chai-as-promised": "5.2.0",
     "istanbul": "0.4.1",
     "kronos-flow": "^1.5.0",
-    "kronos-step-stdio": "2.0.0",
+    "kronos-step-stdio": "^2.0.1",
     "kronos-test-step": "2.8.0",
     "mocha": "2.3.4",
     "semantic-release": "6.0.3"
