--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "cover": "node ./node_modules/istanbul/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports tests",
     "doc": "jsdoc lib/*.js",
-    "test": "mocha tests/*.js",
+    "test": "mocha tests/*_test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -27,22 +27,19 @@
     "chai": "3.4.1",
     "chai-as-promised": "5.2.0",
     "istanbul": "0.4.1",
-    "kronos-flow": "^1.5.0",
+    "kronos-flow": "^1.6.0",
     "kronos-step-stdio": "^2.0.1",
     "kronos-test-step": "2.8.0",
     "mocha": "2.3.4",
     "semantic-release": "6.0.3"
   },
-  "contributors": [
-    {
-      "name": "Torsten Link",
-      "email": "torstenlink@gmx.de"
-    },
-    {
-      "name": "Markus Felten",
-      "email": "markus.felten@gmx.de"
-    }
-  ],
+  "contributors": [{
+    "name": "Torsten Link",
+    "email": "torstenlink@gmx.de"
+  }, {
+    "name": "Markus Felten",
+    "email": "markus.felten@gmx.de"
+  }],
   "license": "BSD-2-Clause",
   "engines": {
     "node": ">=4.2.1"
