--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   },
   "homepage": "https://github.com/Kronos-Integration/kronos-flow-control-step#readme",
   "dependencies": {
-    "kronos-step": "^3.9.0"
+    "kronos-step": "4.0.1"
   },
   "devDependencies": {
     "chai": "3.5.0",
     "cz-conventional-changelog": "^1.1.5",
     "istanbul": "0.4.2",
-    "kronos-flow": "^1.6.3",
-    "kronos-step-stdio": "2.1.2",
-    "kronos-test-step": "^2.10.0",
+    "kronos-flow": "^2.0.0",
+    "kronos-service-manager": "^3.2.0",
+    "kronos-step-stdio": "^3.0.0",
+    "kronos-test-step": "^3.0.1",
     "mocha": "2.4.5",
     "semantic-release": "6.2.0"
   },
@@ -45,7 +46,7 @@
   ],
   "license": "BSD-2-Clause",
   "engines": {
-    "node": ">=4.2.1"
+    "node": ">=45"
   },
   "config": {
     "commitizen": {
