--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "kronos-flow-control-step",
-  "version": "0.0.0",
+  "version": "0.0.0-semantic-release",
   "description": "Step to perform flow controlling actions like load delete stop start",
   "keywords": [
     "kronos-step"
   ],
   "main": "flow_control.js",
   "scripts": {
-    "cover": "node ./node_modules/istanbul/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports tests",
+    "cover": "node ./node_modules/istanbul/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports tests/*_test.js",
     "doc": "jsdoc lib/*.js",
     "test": "mocha tests/*_test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
@@ -32,7 +32,8 @@
     "kronos-step-stdio": "^3.0.0",
     "kronos-test-step": "^3.0.1",
     "mocha": "2.4.5",
-    "semantic-release": "6.2.0"
+    "semantic-release": "6.2.0",
+    "jsdoc": "3.4.0"
   },
   "contributors": [
     {
@@ -46,7 +47,7 @@
   ],
   "license": "BSD-2-Clause",
   "engines": {
-    "node": ">=45"
+    "node": ">=5"
   },
   "config": {
     "commitizen": {
