fix(dependencies): kronos-flow@2.5.8 kronos-test-step@3.0.3 kronos-step@5.0.1

--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
   },
   "homepage": "https://github.com/Kronos-Integration/kronos-flow-control-step#readme",
   "dependencies": {
-    "kronos-step": "5.0.0"
+    "kronos-step": "5.0.1"
   },
   "devDependencies": {
     "chai": "3.5.0",
     "cz-conventional-changelog": "^1.1.5",
     "istanbul": "0.4.2",
     "jsdoc": "3.4.0",
-    "kronos-flow": "2.5.7",
+    "kronos-flow": "2.5.8",
     "kronos-service-manager": "3.2.11",
     "kronos-step-stdio": "3.0.1",
-    "kronos-test-step": "^3.0.2",
+    "kronos-test-step": "3.0.3",
     "mocha": "2.4.5",
     "semantic-release": "6.2.1"
   },
