--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "istanbul": "0.4.2",
     "jsdoc": "3.4.0",
     "kronos-flow": "2.5.12",
-    "kronos-service-manager": "3.2.15",
+    "kronos-service-manager": "^3.2.16",
     "kronos-step-stdio": "3.0.5",
     "kronos-test-step": "3.1.0",
     "mocha": "2.4.5",
