--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "main": "flow_control.js",
   "scripts": {
     "cover": "node ./node_modules/istanbul/lib/cli.js cover --hook-run-in-context ./node_modules/mocha/bin/_mocha -- --R spec --U exports tests/*_test.js",
-    "doc": "jsdoc lib/*.js",
-    "test": "mocha tests/*_test.js",
+    "doc": "node ./node_modules/.bin/jsdoc lib/*.js",
+    "test": "node ./node_modules/.bin/mocha tests/*_test.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Kronos-Integration/kronos-flow-control-step.git"
+    "url": "https://github.com/Kronos-Integration/kronos-flow-control-step.git"
   },
   "bugs": {
     "url": "https://github.com/Kronos-Integration/kronos-flow-control-step/issues"
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "cz-conventional-changelog": "^1.1.6",
+    "cz-conventional-changelog": "1.1.6",
     "istanbul": "0.4.3",
     "jsdoc": "3.4.0",
     "kronos-flow": "^2.5.16",
@@ -48,7 +48,7 @@
   ],
   "license": "BSD-2-Clause",
   "engines": {
-    "node": ">=5"
+    "node": ">=6"
   },
   "config": {
     "commitizen": {
