--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "kronos-step-stdio": "^3.0.13",
     "kronos-test-step": "3.1.4",
     "mocha": "2.5.3",
-    "semantic-release": "^6.2.2"
+    "semantic-release": "6.3.0"
   },
   "contributors": [
     {
