--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Kronos-Integration/kronos-flow-control-step.git"
+    "url": "git+https://github.com/Kronos-Integration/kronos-flow-control-step.git"
   },
   "bugs": {
     "url": "https://github.com/Kronos-Integration/kronos-flow-control-step/issues"
@@ -25,7 +25,7 @@
     "kronos-step": "^5.3.7"
   },
   "devDependencies": {
-    "chai": "4.1.2",
+    "chai": "^4.1.2",
     "cz-conventional-changelog": "2.0.0",
     "istanbul": "0.4.5",
     "jsdoc": "3.5.4",
@@ -34,8 +34,8 @@
     "kronos-service-manager": "^3.5.1",
     "kronos-step-stdio": "^3.0.18",
     "kronos-test-step": "3.1.4",
-    "mocha": "3.5.2",
-    "semantic-release": "^7.0.1"
+    "mocha": "^3.5.2",
+    "semantic-release": "^8.0.0"
   },
   "contributors": [
     {
@@ -49,11 +49,14 @@
   ],
   "license": "BSD-2-Clause",
   "engines": {
-    "node": ">=6.9.1"
+    "node": ">=8.4.0"
   },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+  "xo": {
+    "space": true
+  },
+  "template": {
+    "repository": {
+      "url": "https://github.com/Kronos-Tools/npm-package-template-minimal.git"
     }
   }
 }
