--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "posttest": "npm run prepare && markdown-doctest",
     "prepare": "rollup -c",
     "docs": "documentation readme src/flow-control.js --section=API",
-    "lint": "documentation lint src/flow-control.js"
+    "lint": "documentation lint src/flow-control.js",
+    "travis-deploy-once": "travis-deploy-once"
   },
   "dependencies": {
     "kronos-endpoint": "^2.14.15",
@@ -40,13 +41,14 @@
     "kronos-service-manager": "^3.5.1",
     "kronos-step-stdio": "^3.0.18",
     "kronos-test-step": "3.1.4",
-    "semantic-release": "^11.1.0",
+    "semantic-release": "^12.2.0",
     "documentation": "^5.3.5",
     "markdown-doctest": "^0.9.1",
     "nyc": "^11.4.1",
     "ava": "^0.24.0",
     "rollup": "^0.54.0",
-    "rollup-plugin-multi-entry": "^2.0.2"
+    "rollup-plugin-multi-entry": "^2.0.2",
+    "travis-deploy-once": "^4.3.1"
   },
   "engines": {
     "node": ">=8.9.4"
