chore(package): add publishConfig from template chore(travis): remove node versions 10.2.1 chore(travis): add node versions 10.3

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "kronos-flow-control-step",
   "version": "0.0.0-semantic-release",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/flow-control.js",
   "module": "src/flow-control.js",
   "description": "Step to perform flow controlling actions like load delete stop start",
