--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
   "homepage": "https://github.com/Kronos-Integration/kronos-flow-control-step#readme",
   "ava": {
     "files": [
-      "tests/*-test.js"
+      "tests/*-test.js",
+      "tests/*-test.mjs"
     ],
     "presets": [
       "env"
