--- a/package.json
+++ b/package.json
@@ -24,34 +24,34 @@
   "scripts": {
     "cover": "c8 --temp-directory build/coverage ava && c8 report -r lcov --temp-directory build/coverage",
     "doc": "./node_modules/.bin/jsdoc lib/*.js",
-    "test": "ava",
+    "docs": "documentation readme src/flow-control.js --section=API",
+    "lint": "documentation lint src/flow-control.js",
     "posttest": "npm run prepare && markdown-doctest",
     "prepare": "rollup -c",
-    "docs": "documentation readme src/flow-control.js --section=API",
-    "lint": "documentation lint src/flow-control.js"
+    "test": "ava"
   },
   "dependencies": {
     "kronos-endpoint": "^2.15.0",
     "kronos-step": "^5.7.0"
   },
   "devDependencies": {
+    "ava": "^1.0.1",
+    "c8": "^3.2.1",
+    "documentation": "^9.1.1",
+    "esm": "^3.0.84",
     "kronos-flow": "^2.5.40",
     "kronos-interceptor-decode-json": "^1.1.0",
     "kronos-service-manager": "^3.5.1",
     "kronos-step-stdio": "^3.0.18",
     "kronos-test-step": "3.1.4",
-    "semantic-release": "^15.13.2",
-    "documentation": "^9.1.1",
     "markdown-doctest": "^0.9.1",
-    "ava": "^1.0.1",
     "rollup": "^1.0.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-executable": "^1.3.0",
     "rollup-plugin-cleanup": "^3.1.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-executable": "^1.3.0",
     "rollup-plugin-json": "^3.1.0",
-    "c8": "^3.2.1",
-    "esm": "^3.0.84"
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "semantic-release": "^15.13.2"
   },
   "engines": {
     "node": ">=10.15.0"
